# AssemblyLine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: lint.yaml  tests.yaml
agent/: Cargo.toml
agent/src/: cli.rs  main.rs
agent/src/cli/: config.rs  lint.rs  run.rs
config/: Cargo.toml
config/src/: lib.rs  main.rs
config/src/pipeline/: events.rs  example.yaml  metadata.rs  mod.rs  pipeline_config.rs  station.rs  station_config.rs  step.rs  step_config.rs
config/src/pipelines/: events.rs  metadata.rs  mod.rs  pipeline.rs  station.rs  station_config.rs  step.rs  step_config.rs
cri/: Cargo.toml  build.rs
cri/src/: channel.rs  lib.rs  main.rs  requests.rs
docs/: getting_started.md  pipeline_structure.md
docs/pipelines/: example.yaml
server/: .env  Cargo.toml  al.db  run-dump.txt
server/migrations/: 20230228224430.sql
server/src/: main.rs
server/src/config/: mod.rs  server.rs
server/src/database/: connection_manager.rs  mod.rs
server/src/github/: events.rs  example_pr_closed.json  example_wh.json  middleware.rs  mod.rs  webhook.rs
server/src/github/data/: check_run.rs  mod.rs  organization.rs  pull_request.rs  repository.rs  sender.rs  webhook_event.rs
