[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
sqlx = { version = "0.6", features = ["sqlite", "postgres", "any", "runtime-tokio-native-tls"] }
tokio = { version = "1.20.0", features = ["macros"]}
actix-web = "4"
futures-util = "0.3.26"
urlencoding = "2.1.2"

# Yaml config parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.17"